[package]
name = "orka-contracts"
description = "Canonical contracts, capability model, and interaction types for Orka integrations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
utoipa.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
