[package]
name = "orka-core"
description = "Shared types, traits, and error definitions for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
async-trait.workspace = true
chrono.workspace = true
dashmap = "6"
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
toml_edit = { workspace = true }
tracing.workspace = true
uuid.workspace = true
utoipa.workspace = true
zeroize.workspace = true
