[package]
name = "orka-core"
description = "Shared types, traits, and error definitions for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
full = ["testing", "config"]

# Enable in-memory backends and test doubles (InMemoryBus, InMemorySessionStore, etc.)
# Needed by: production in-memory backends (orka-infra) and test code
testing = ["tokio/rt", "tokio/macros"]

# Enable full config support (AgentConfig, GraphDef, etc.)
# Needed by: orka-agent, orka-worker, orka-config, orka-cli
config = []

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
utoipa.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
futures-util = { workspace = true }
toml = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
