[package]
name = "orka-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core = { workspace = true }
orka-skills = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.9"
tokio = { workspace = true, features = ["rt", "time"] }
glob = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
insta = { workspace = true }
tempfile = { workspace = true }
