[package]
name = "orka-eval"
description = "TOML-based skill evaluation framework for scenario testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core = { workspace = true }
orka-llm = { workspace = true }
orka-skills = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
glob = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
