[package]
name = "orka-gateway"
description = "HA gateway for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-contracts.workspace = true
orka-core.workspace = true
orka-infra.workspace = true
orka-workspace.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
uuid.workspace = true
serde.workspace = true

[dev-dependencies]
orka-core.workspace = true
orka-test-support.workspace = true
serde_json.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = [
  "test-util",
  "macros",
  "rt-multi-thread",
] }
tokio-util.workspace = true

[lints]
workspace = true
