[package]
name = "orka-guardrails"
description = "Content safety guardrails for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
