[package]
name = "orka-guardrails"
description = "Content safety guardrails for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
orka-llm.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tokio.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [
  "test-util",
  "macros",
  "rt-multi-thread",
] }

[lints]
workspace = true
