[package]
name = "orka-knowledge"
description = "Knowledge & RAG skills for Orka agents (embeddings, vector store, document ingestion)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
qdrant-client = "1"
fastembed = "4"
text-splitter = { version = "0.16", features = ["tiktoken-rs"] }
pdf-extract = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
testcontainers.workspace = true
