[package]
name = "orka-knowledge"
description = "Knowledge & RAG skills for Orka agents (embeddings, vector store, document ingestion)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["qdrant", "local-embeddings", "openai-embeddings", "pdf"]
qdrant = ["dep:qdrant-client"]
local-embeddings = ["dep:fastembed"]
openai-embeddings = []
pdf = ["dep:pdf-extract"]

[dependencies]
orka-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
qdrant-client = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }
text-splitter.workspace = true
pdf-extract = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
testcontainers.workspace = true
proptest.workspace = true

[lints]
workspace = true
