[package]
name = "orka-llm"
description = "LLM client for Orka"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["anthropic", "openai", "ollama"]
anthropic = []
openai = ["dep:tiktoken-rs"]
ollama = ["openai"]

[dependencies]
orka-core.workspace = true
thiserror.workspace = true
orka-circuit-breaker.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures-util.workspace = true
tiktoken-rs = { workspace = true, optional = true }

[lints]
workspace = true
