[package]
name = "orka-mcp"
description = "MCP client for Orka — connects to MCP tool servers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orka-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
